--- a/i3status/config
+++ b/i3status/config
@@ -5,7 +5,7 @@
 general {
         output_format = "i3bar"
         colors = true
-	color_good = "#B8BB26"
+	color_good = "#689D6A"
 	color_degraded = "#FABD2F"
 	color_bad = "#FB4934"
 	color_separator = "#A89984"
