--- a/Code/settings.json
+++ b/Code/settings.json
@@ -26,7 +26,7 @@
     "keyboard.dispatch": "keyCode",
     "editor.lineNumbers": "relative",
     "redhat.telemetry.enabled": false,
-    "workbench.colorTheme": "Catppuccin Mocha",
+    "workbench.colorTheme": "Houston",
     "workbench.preferredDarkColorTheme": "Catppuccin Mocha",
     "workbench.preferredLightColorTheme": "Catppuccin Latte",
     "javascript.updateImportsOnFileMove.enabled": "always",
@@ -37,5 +37,9 @@
         "scminput": false
     },
     "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, UseTab: Never, IndentWidth: 2, TabWidth: 2, BreakBeforeBraces: Attach, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 0, AccessModifierOffset: -2 }",
-    "extensions.ignoreRecommendations": true // Use keyCode for neovim
+    "extensions.ignoreRecommendations": true,
+    "cSpell.userWords": [
+        "microcontroller",
+        "temphum"
+    ] // Use keyCode for neovim
 }
