--- a/Code/settings.json
+++ b/Code/settings.json
@@ -1,46 +1,23 @@
 {
-    // Theme settings
-    "editor.fontSize": 14,
-    "editor.fontFamily": "'Source Code Pro Medium', 'monospace', monospace",
-    "editor.fontWeight": "800",
-    "workbench.iconTheme": "symbols",
-    // view settings
-    "editor.minimap.enabled": false,
-    "breadcrumbs.enabled": false,
-    "editor.renderWhitespace": "all",
-    "editor.tabSize": 2,
-    "window.zoomLevel": 0,
-    // some babysitting
-    "symbols.hidesExplorerArrows": false,
-    "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false,
-    "workbench.startupEditor": "none",
-    // formatting
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
-    // vim settings
-    "extensions.experimental.affinity": {
-        "asvetliakov.vscode-neovim": 1
-    },
-    "vim.useSystemClipboard": true,
-    "keyboard.dispatch": "keyCode",
-    "editor.lineNumbers": "relative",
-    "redhat.telemetry.enabled": false,
-    "workbench.colorTheme": "Houston",
-    "workbench.preferredDarkColorTheme": "Catppuccin Mocha",
-    "workbench.preferredLightColorTheme": "Catppuccin Latte",
-    "javascript.updateImportsOnFileMove.enabled": "always",
-    "github.copilot.enable": {
-        "*": false,
-        "plaintext": false,
-        "markdown": false,
-        "scminput": false
-    },
-    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, UseTab: Never, IndentWidth: 2, TabWidth: 2, BreakBeforeBraces: Attach, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 0, AccessModifierOffset: -2 }",
-    "extensions.ignoreRecommendations": true,
-    "cSpell.userWords": [
-        "microcontroller",
-        "temphum"
-    ],
-    "workbench.editor.empty.hint": "hidden" // Use keyCode for neovim
+  // Theme settings
+  "editor.fontSize": 14,
+  "editor.fontFamily": "'Source Code Pro Medium', 'monospace', monospace",
+  "editor.fontWeight": "600",
+  "workbench.iconTheme": "symbols",
+  // view settings
+  "editor.minimap.enabled": false,
+  "breadcrumbs.enabled": false,
+  "editor.renderWhitespace": "all",
+  "editor.tabSize": 4,
+  "window.zoomLevel": 0,
+  // some babysitting
+  "symbols.hidesExplorerArrows": false,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "workbench.startupEditor": "none",
+  // formatting
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  // vim
+  "keyboard.dispatch": "keyCode"
 }
